[package]
name = "actix-mqtt"
version = "0.2.1"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "MQTT v3.1.1 Client/Server framework"
documentation = "https://docs.rs/actix-mqtt"
repository = "https://github.com/actix/actix-mqtt.git"
categories = ["network-programming"]
keywords = ["MQTT", "IoT", "messaging"]
license = "MIT/Apache-2.0"
exclude = [".gitignore", ".travis.yml", ".cargo/config"]
edition = "2018"

[workspace]
members = [
  ".",
  "codec",
]

[dependencies]
mqtt-codec = { path = "codec" }
actix-codec = "^0.2.0"
actix-service = "^1.0"
actix-utils = "^1.0"
actix-router = "^0.2.0" # TODO fix this pinning
actix-ioframe = "^0.4"
actix-rt = "^1.1"
derive_more = "^0.99"
bytes = "^0.5"
either = "1.5.2"
futures = "0.3.1"
pin-project = "0.4.6"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4"] }

[dependencies.bytestring]
version = "=0.1.5"

[dev-dependencies]
env_logger = "^0.6"
actix-connect = "^1.0.1"
actix-server = "^1.0.0"
actix-testing = "^1.0.0"
