[package]
name = "mqtt-codec"
version = "0.3.0"
authors = ["Presciense info@presciense.com"]
description = "MQTT v3.1.1 Codec"
documentation = "https://docs.rs/mqtt-codec"
repository = "https://github.com/presciense/actix-mqtt.git"
readme = "README.md"
keywords = ["MQTT", "IoT", "messaging"]
license = "MIT/Apache-2.0"
edition = "2018"
workspace = ".."

[dependencies]
bitflags = "1.0"
bytes = "^0.5"
actix-codec = "^0.2.0"

[dependencies.bytestring]
version = "=0.1.2"